# CATAI-Windows

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh  cat.swift  package.ps1
.github/: check-plan.md  copilot-instructions.md
src/: app.rs  l10n.rs  main.rs
src/cat/: animation.rs  mod.rs  sprite.rs  state.rs
src/config/: mod.rs
src/ollama/: client.rs  mod.rs
src/system/: mod.rs  mouse.rs  taskbar.rs  windows.rs
src/ui/: chat_bubble.rs  input_box.rs  layered.rs  mod.rs  settings.rs  tray.rs
